增加代码高亮

--- a/_posts/2012-09-05-yii_on.md
+++ b/_posts/2012-09-05-yii_on.md
@@ -11,7 +11,7 @@ tags: ["Yii事件", "回调"]
 
 （新增/编辑）、设计到的变更表和操作人等信息记录到定义的日志池中，之后对成员方法update()、insert()和save()进行封装，在成功操作后绑定记录日志事件并清空日志信息池，最终代码如下：
 
-{% highlight php %}
+{% highlight java %}
 Abstract class AmsAbstractList extends CActiveRecord{
     /**
      * @access public
@@ -123,7 +123,7 @@ Abstract class AmsAbstractList extends CActiveRecord{
 
 由于根本没有在ar中定义attributes这个属性，那么断定为问题出现在了__set上，于是去翻阅Yii的源代码去查看问题所在，其中CActiveRecord的源代码中对于__set魔法函数的实现代码如下：
 
-{% highlight php %}
+{% highlight java %}
     /**
      * PHP setter magic method.
      * This method is overridden so that AR attributes can be accessed like properties.
@@ -165,7 +165,7 @@ Abstract class AmsAbstractList extends CActiveRecord{
 
 ar的__set方法根据setAttribute的返回值进行验证，若返回值绝对等于false，那么会验证是否为ar的关联数据，若为是那么记录到ar类的关联关系集合中，若不是则调用父类CModel的__set方法，CModel中不存在__set魔术方法，方法继承自父类CComponent，具体代码如下：
 
-{% highlight php %}
+{% highlight java %}
 /**
      * Sets value of a component property.
      * Do not call this method. This is a PHP magic method that we override
