upgrade highlight && add an old  page which forget commit

--- a/_posts/2015-08-20-php-trait.md
+++ b/_posts/2015-08-20-php-trait.md
@@ -16,7 +16,7 @@ tags: ["PHP", "5.4", "新特性"]
 问题二：PHP如何实现多继承？   
 Oh，好问题，没办法；不是绝对的没有办法，可以用类成员变量去模拟实现，太费劲！让trait来帮你解决这个问题   
 
-{% highlight php %}
+```php
 <?php
 trait Person {
 	public $eyes;
@@ -42,7 +42,7 @@ $objProgrammer->coding();
 
 程序输出：
 Hello World
-{% endhighlight %}
+```
 
 官方文档：[Traits](http://php.net/manual/zh/language.oop5.traits.php "Traits")   
 
